Prevent page scrollbar for X axes

--- a/blocks/b-axis/b-axis.css
+++ b/blocks/b-axis/b-axis.css
@@ -8,6 +8,18 @@
     -webkit-user-select: none;
 }
 
+.b-axis_pos_top
+{
+    height: 100%;
+    overflow: hidden;
+}
+
+.b-axis_pos_bottom
+{
+    height: 100%;
+    overflow: hidden;
+}
+
 .b-axis__value
 {
     position: absolute;
